alignment and arrangement issues sorted

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .cable_size_field {
 	display: flex;
 	flex-wrap: wrap;
-	margin-bottom: 10px;
+	margin-bottom: 0;
 	overflow: hidden;
 	justify-content: center;
 }
